[package]
name = "network-examples"
version = "0.1.0"
authors = ["telumo <drumscohika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
clap = "2.33.1"
regex = "1"
failure = "0.1.8"